--- a/fe/src/app/component/add-notes/setting-icon-note/add-icon/add-icon.component.html
+++ b/fe/src/app/component/add-notes/setting-icon-note/add-icon/add-icon.component.html
@@ -35,7 +35,7 @@
         </mat-grid-list>
     </mat-form-field>
     <div style="display: flex;">
-        <button mat-raised-button>Tạo</button>
-        <a mat-raised-button href="https://www.google.com/" target="_blank">Hủy</a>
+        <button mat-raised-button style="margin-right: 10px;">Tạo</button>
+        <a mat-raised-button routerLink="../">Hủy</a>
     </div>
 </form>
