--- a/fe/src/app/component/report/account/manage-account/manage-account.component.css
+++ b/fe/src/app/component/report/account/manage-account/manage-account.component.css
@@ -28,7 +28,11 @@
 }
 
 table {
+    width: 100%;
+    margin: 15px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: rgb(78, 68, 75);
 }
 
 td {
@@ -41,6 +45,7 @@ tr {
 }
 tr:hover {
     background-color: #454444;
+    border-radius: 5px;
 }
 
 .custom-data {
