--- a/fe/src/app/component/add-notes/add-notes.component.css
+++ b/fe/src/app/component/add-notes/add-notes.component.css
@@ -83,3 +83,32 @@
     color: white;
     /* Màu chữ của chú thích */
 }
+
+.add-account-icon {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #000;
+    border-radius: 20%;
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
+    cursor: pointer;
+    background-color: yellow;
+    color: black;
+}
+
+.account-transfer {
+    display: inline-flex;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.icon-with-caption-account {
+    width: 40%;
+    background-color: rgb(67, 66, 66);
+    border-radius: 5px;
+}
